[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Ninja.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Background/BG.png" type="Texture" id=3]
[ext_resource path="res://Scenes/SueloIzquierda.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SueloCentral.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/SueloDerecha.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/House In a Forest Loop.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sounds/gameover.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Menu.tscn" type="PackedScene" id=9]

[node name="Level" type="Node" index="0"]

script = ExtResource( 1 )
Ninja = ExtResource( 2 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 361.643, 238.365 )
scale = Vector2( 0.409352, 0.422391 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset" ]

[node name="SueloIzquierda" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 32.7132, 482.861 )

[node name="SueloIzquierda2" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 69.0142, 223.811 )

[node name="SueloIzquierda3" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 401.991, 359.843 )

[node name="SueloIzquierda4" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 541.612, 186.964 )

[node name="SueloCentral" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 95.8922, 482.766 )

[node name="SueloCentral6" parent="." index="6" instance=ExtResource( 5 )]

position = Vector2( 132.856, 223.716 )

[node name="SueloCentral7" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 465.975, 359.774 )

[node name="SueloCentral2" parent="." index="8" instance=ExtResource( 5 )]

position = Vector2( 159.64, 482.766 )

[node name="SueloCentral9" parent="." index="9" instance=ExtResource( 5 )]

position = Vector2( 529.723, 359.774 )

[node name="SueloCentral3" parent="." index="10" instance=ExtResource( 5 )]

position = Vector2( 223.173, 482.766 )

[node name="SueloCentral5" parent="." index="11" instance=ExtResource( 5 )]

position = Vector2( 197.033, 223.716 )

[node name="SueloCentral8" parent="." index="12" instance=ExtResource( 5 )]

position = Vector2( 593.256, 359.774 )

[node name="SueloCentral10" parent="." index="13" instance=ExtResource( 5 )]

position = Vector2( 605.444, 186.921 )

[node name="SueloDerecha" parent="." index="14" instance=ExtResource( 6 )]

position = Vector2( 287.488, 482.727 )

[node name="SueloDerecha2" parent="." index="15" instance=ExtResource( 6 )]

position = Vector2( 260.685, 223.677 )

[node name="SueloDerecha3" parent="." index="16" instance=ExtResource( 6 )]

position = Vector2( 656.908, 359.735 )

[node name="SueloDerecha4" parent="." index="17" instance=ExtResource( 6 )]

position = Vector2( 669.096, 186.882 )

[node name="KinematicBody2D" parent="." index="18" instance=ExtResource( 2 )]

position = Vector2( 48, 340 )

[node name="Musica" type="AudioStreamPlayer" parent="." index="19"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Muerte" type="AudioStreamPlayer" parent="." index="20"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HUI" parent="." index="21" instance=ExtResource( 9 )]

[node name="StartPosition" type="Position2D" parent="." index="22"]

position = Vector2( 51.2629, 338.539 )
scale = Vector2( -1.10264, -1.59742 )
_sections_unfolded = [ "Transform" ]

[connection signal="cae" from="KinematicBody2D" to="." method="_on_KinematicBody2D_cae"]

[connection signal="boton" from="HUI" to="." method="_on_HUI_boton"]


